[workspace]
members = [
    "crates/cli",
    "crates/dep-graph",
    "crates/extractor",
    "crates/types",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/akronim26/Plexus"

[workspace.dependencies]
alloy = { version = "1.7", features = ["full"] }
alloy-primitives = { version = "1.6", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
thiserror = "1"
hex = "0.4"