[package]
name = "parser"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy-primitives.workspace = true
dirs.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
alloy.workspace = true
tokio.workspace = true
tracing.workspace = true
rand.workspace = true
tower.workspace = true
reqwest.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
rand = "0.8"
tower = "0.5"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
wiremock = "0.6"
tracing-subscriber = "0.3"